--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,5 +24,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+
+      - name: 依存関係のインストール
+        run: npm ci
+
       - name: ビルドを実行
         run: npm run build --if-present
