--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
   "env": {
     "browser": true
   },
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
+  "extends": ["next", "next/core-web-vitals", "eslint:recommended", "prettier"],
   "rules": {
     // セミコロンない場合、エラー出力
     "semi": ["error", "always"]
