--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^3.0.0"
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
