--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "lint:fix": "eslint app features --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
-    "format alt": "prettier --write --ignore-path .gitignore ./**/*.{js,jsx,ts,tsx,json,css}"
+    "format-alt": "prettier --write --ignore-path .gitignore ./**/*.{js,jsx,ts,tsx,json,css}"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
